...
            .fadeIn(duration: 400.ms, delay: 200.ms)
            .slideY(begin: 0.2, end: 0),

        const Gap(8),

        Text(
              'Inicia sesión en tu cuenta',
              style: Theme.of(context).textTheme.bodyLarge?.copyWith(
                color: Theme.of(context).colorScheme.onSurfaceVariant,
              ),
            )
            .animate()
            .fadeIn(duration: 400.ms, delay: 400.ms)
...
